--- a/style.css
+++ b/style.css
@@ -21,3 +21,11 @@ label {
     justify-content: space-between;
     width: 100%;
 }
+textarea {
+    width: 100%;
+    margin-bottom: 15px;
+    padding: 10px;
+    font-size: 16px;
+    box-sizing: border-box;
+    resize: vertical;
+}
